# leopard

./: .gitignore  .gitmodules  .travis.yml  Benchmarks.md  CMakeLists.txt  LeopardCommon.cpp  LeopardCommon.h  LeopardDecoder.h  LeopardFF16.cpp  LeopardFF16.h  LeopardFF8.cpp  LeopardFF8.h  License.md  README.md  appveyor.yml  leopard.cpp  leopard.h  lhc_rs.cpp
docs/: vector_fwht_4.txt
msvc/: LHC_RS.sln  LHC_RS.vcxproj  LHC_RS.vcxproj.filters
proj/: Leopard.sln  Leopard.vcxproj  Leopard.vcxproj.filters
tests/: benchmark.cpp  experiments.cpp
tests/proj/: Benchmark.vcxproj  Experiments.filters  Experiments.vcxproj
